--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=project1
+application.title=Group5
 application.vendor=Administrator
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,13 +29,13 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/project1.jar
+dist.jar=${dist.dir}/Group5.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/project1
+dist.jlink.output=${dist.jlink.dir}/Group5
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.0.32.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-j-8.0.32.jar
+file.reference.mysql-connector-j-8.0.32.jar=../../../../../../Program Files (x86)/MySQL/Connector J 8.0/mysql-connector-j-8.0.32.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=project1
+jlink.launcher.name=Group5
 main.class=main.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
